<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/complete_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.tesca.dabbaapp.CompleteFragment"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:orientation="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_weight="0.3">


    <TextView
        android:id="@+id/deliver_complete_user"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/user_name"
        android:layout_weight="0.3"
        />

    <TextView
        android:id="@+id/deliver_complete_address"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/user_address"
        android:layout_weight="0.3"

        />

    <TextView
        android:id="@+id/deliver_order"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/user_order"
        android:layout_weight="0.3"

        />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.7"
        android:gravity="center"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/complete_deliver"
            android:theme="@style/RaisedButtonDark"
            />


    </RelativeLayout>
    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>