<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.tesca.dabbaapp.DeliverMainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"

        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="0.35"
            >

            <TextView
                android:id="@+id/delivery_text"
                android:layout_width="match_parent"
                android:layout_height="100sp"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/editTextColorBlack"
                android:gravity="center"
                android:textAlignment="center"
                android:text="@string/deliveryman"/>


            <TextView
                android:id="@+id/delivery_login_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/editTextColorBlack"
                android:layout_below="@+id/delivery_text"
                android:text="@string/delivery_login"
                />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.29">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/moto2"
                android:id="@+id/imageView"
                android:layout_centerInParent="true"
                android:scaleType="fitCenter" />
        </RelativeLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.36"
            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/delivery_session_text"
                android:theme="@style/RaisedButtonDark"
                android:onClick="goDeliveryId"
                />

        </RelativeLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
