<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_deliverman_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorLightPrimary"
    tools:context="com.tesca.dabbaapp.DelivermanLoginActivity"
    >

    <include layout="@layout/actionbar_toolbar"/>



    <LinearLayout
        android:id="@+id/deliverman_login"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <RelativeLayout
            android:id="@+id/deliverman_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="3"
            >

            <ImageView
                android:layout_width="350dp"
                android:layout_height="170dp"
                android:background="@drawable/dabba_logo"
                />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3.3"
            android:orientation="vertical"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/usertext_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_text"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/passwordtext_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_text"
                android:textSize="20sp"
                android:textStyle="bold"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3.7"
            android:orientation="vertical"
            android:gravity="center"
            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@styles/RaisedButtonDark"
                android:text="@string/btn_Log"
                android:textStyle="normal"
                android:textSize="25sp"
                android:onClick="goDeliveryId"
                />

        </LinearLayout>


    </LinearLayout>




</android.support.design.widget.CoordinatorLayout>
