<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_deliverman_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/fondo3"
    tools:context="com.tesca.dabbaapp.Deliverman_control_views.DelivermanEmailActivity"
    >

    <include layout="@layout/actionbar_toolbar"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:weightSum="1"
            >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            >

                    <ImageView
                        android:id="@+id/deliver_dabba_logo"
                        android:layout_width="300dp"
                        android:layout_height="150dp"
                        android:background="@drawable/dabba_logo"
                        android:layout_centerInParent="true"
                        />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:layout_weight="0.4"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:theme="@style/EditTextBlack"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/deliver_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_user"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:theme="@style/EditTextBlack"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/deliver_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/RaisedButtonDark"
                android:enabled="true"
                android:text="@string/btn_Log"
                />

            </LinearLayout>

    </ScrollView>

</LinearLayout>

</android.support.design.widget.CoordinatorLayout>
